samples/_failures_safe/1761442991_21ae45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af2c8e0c.c: In function ‘main’:
./samples/SAFE/__tmp_af2c8e0c.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
